--- a/manifest.in
+++ b/manifest.in
@@ -1,5 +1,5 @@
-include *.md
+include *.asciidoc
 include requirements/*.txt
-recursive-include msad-query/*.md
+recursive-include msad-query/*.asciidoc
 recursive-include msad-query/*.json
 prune tests
